--- a/lightyear_netcode/Cargo.toml
+++ b/lightyear_netcode/Cargo.toml
@@ -52,5 +52,8 @@ tracing.workspace = true
 rand.workspace = true
 chacha20poly1305.workspace = true
 
+[target."cfg(target_family = \"wasm\")".dependencies]
+web-time.workspace = true
+
 [lints]
 workspace = true
