--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,58 +17,36 @@ env:
   RUSTFLAGS: --deny warnings -C debuginfo=line-tables-only
   RUSTDOCFLAGS: --deny warnings
 jobs:
-  format:
-    name: Format
-    runs-on: ubuntu-latest
-    steps:
-      - name: Clone repo
-        uses: actions/checkout@v4
-
-      - name: Cache crates
-        uses: Swatinem/rust-cache@v2
-
-      - name: Format
-        run: |
-          cargo fmt --all --check
-
   lint:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - name: Install packages
-        run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config libusb-1.0-0-dev libftdi1-dev libudev-dev;
-
-      - name: Clone repo
-        uses: actions/checkout@v4
-
-      - name: Instal stable toolchain
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache crates
-        uses: Swatinem/rust-cache@v2
-
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+        with:
+          save-if: ${{ github.ref == 'refs/heads/main' }}
+          cache-all-crates: true
+          shared-key: lints
+      - name: Format
+        run: |
+          cargo fmt --all --check
       - name: Clippy
-        run: cargo clippy --workspace --no-deps --tests -- -D warnings -A clippy::wrong_self_convention
+        run: cargo clippy --locked --all-targets --workspace --no-deps --tests -- -D warnings -A clippy::wrong_self_convention
 
-      - name: Rustdoc
-        run: cargo rustdoc --workspace --features=metrics,interpolation,prediction,replication,leafwing,inputs_native,avian_2d,avian2d/2d,avian2d/f32,avian2d/parry-f32 -- --document-private-items -D warnings --cfg docsrc
-
-  doctest:
+  docs:
     name: Doctest
     runs-on: ubuntu-latest
     steps:
-      - name: Install packages
-        run: sudo apt-get update && sudo apt-get install -y libasound2-dev pkg-config libusb-1.0-0-dev libftdi1-dev libudev-dev;
-
-      - name: Clone repo
-        uses: actions/checkout@v4
-
-      - name: Install stable toolchain
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Cache crates
-        uses: Swatinem/rust-cache@v2
-
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+        with:
+          save-if: ${{ github.ref == 'refs/heads/main' }}
+          cache-all-crates: true
+          shared-key: lints
+      - name: Rustdoc
+        run: cargo rustdoc --workspace --features=metrics,interpolation,prediction,replication,leafwing,input_native,avian_2d,avian2d/2d,avian2d/f32,avian2d/parry-f32 -- --document-private-items -D warnings --cfg docsrc
       - name: Test doc
         run: cargo test --workspace --doc
 
@@ -95,7 +73,7 @@ jobs:
         run: cargo install cargo-tarpaulin
 
       - name: Test
-        run: cargo tarpaulin --all-features --engine llvm --out lcov
+        run: cargo tarpaulin --all-features --features=avian_2d,avian2d/2d,avian2d/f32,avian2d/parry-f32 --engine llvm --out lcov
 
       - name: Upload code coverage results
         if: github.actor != 'dependabot[bot]'
