--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,7 +32,7 @@ jobs:
         run: |
           cargo fmt --all --check
       - name: Clippy
-        run: cargo clippy --locked --all-targets --workspace --no-deps --tests -- -D warnings -A clippy::wrong_self_convention
+        run: cargo clippy --all-targets --workspace --no-deps --tests -- -D warnings -A clippy::wrong_self_convention
 
   docs:
     name: Doctest
