--- a/lightyear_tests/Cargo.toml
+++ b/lightyear_tests/Cargo.toml
@@ -7,6 +7,7 @@ rust-version.workspace = true
 license.workspace = true
 description = "Setup for integration tests for the lightyear networking library"
 repository = "https://github.com/cBournhonesque/lightyear"
+publish = false
 
 [features]
 default = [
