Adjusting changelogs prior to release of lightyear_serde v0.21.0-rc.1, lightyear_utils v0.21.0-rc.1, lightyear_core v0.21.0-rc.1, lightyear_link v0.21.0-rc.1, lightyear_connection v0.21.0-rc.1, lightyear_macros v0.21.0-rc.1, lightyear_transport v0.21.0-rc.1, lightyear_messages v0.21.0-rc.1, lightyear_replication v0.21.0-rc.1, lightyear_sync v0.21.0-rc.1, lightyear_interpolation v0.21.0-rc.1, lightyear_prediction v0.21.0-rc.1, lightyear_frame_interpolation v0.21.0-rc.1, lightyear_avian v0.21.0-rc.1, lightyear_crossbeam v0.21.0-rc.1, lightyear_inputs v0.21.0-rc.1, lightyear_inputs_leafwing v0.21.0-rc.1, lightyear_inputs_native v0.21.0-rc.1, lightyear_netcode v0.21.0-rc.1, lightyear_aeronet v0.21.0-rc.1, lightyear_webtransport v0.21.0-rc.1, lightyear_udp v0.21.0-rc.1, lightyear v0.21.0-rc.1

--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightyear"
-version.workspace = true
+version = "0.21.0-rc.1"
 authors.workspace = true
 rust-version.workspace = true
 edition.workspace = true
