--- a/lightyear_connection/Cargo.toml
+++ b/lightyear_connection/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightyear_connection"
-version.workspace = true
+version = "0.21.0-rc.1"
 authors.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -12,8 +12,6 @@ repository = "https://github.com/cBournhonesque/lightyear"
 default = ["std"]
 std = [
     "lightyear_link/std",
-    "lightyear_transport/std",
-    "lightyear_messages/std",
     "lightyear_serde/std"
 ]
 client = []
@@ -34,11 +32,6 @@ serde.workspace = true
 smallvec.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
-
-[dev-dependencies]
-lightyear_macros.workspace = true
-lightyear_messages = {workspace = true, features = ["test_utils"]}
-lightyear_transport = {workspace = true, features = ["test_utils"]}
 
 [lints]
 workspace = true
