Separate Link from LocalAddr/RemoteAddr Separate Connected from LocalId/RemoteId
We want to do this separation to:
- make Link less coupled with the notion of a SocketAddr
- be more similat to what aeronet does
- be able to access the LocalId/RemoteId even when the client is not
  Connected (for example to check the RemoteId of the client who just
  disconnected)

--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -157,6 +157,9 @@ lightyear_webtransport = {workspace = true, optional = true}
 # bevy
 bevy.workspace = true
 
+# io
+aeronet_io.workspace = true
+
 
 [target."cfg(not(target_family = \"wasm\"))".dependencies]
 lightyear_udp = { workspace = true, optional = true }
