--- a/lightyear_utils/Cargo.toml
+++ b/lightyear_utils/Cargo.toml
@@ -18,12 +18,14 @@ lightyear_serde.workspace = true
 # utils
 hashbrown.workspace = true
 paste.workspace = true
+seahash.workspace = true
 
 # bevy
 bevy.workspace = true
 
 # serde
 serde.workspace = true
+
 
 [lints]
 workspace = true
