--- a/lightyear_connection/Cargo.toml
+++ b/lightyear_connection/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/cBournhonesque/lightyear"
 [features]
 default = ["std"]
 std = [
+    "bytes/std",
     "lightyear_link/std",
     "lightyear_serde/std"
 ]
@@ -28,7 +29,9 @@ lightyear_serde.workspace = true
 # bevy
 bevy.workspace = true
 
+
 # utils
+bytes.workspace = true
 serde.workspace = true
 smallvec.workspace = true
 thiserror.workspace = true
